Money Manager 23.3.2
* JDK 20
* JavaFX 20
* Backend: bump Spring Boot version to 3.0.5
* PlantULM for database ERD